--- a/math_analyze.ipynb
+++ b/math_analyze.ipynb
@@ -116,6 +116,8 @@
     "stats_dict4 = get_stats(\"math_orig_6epochs_full_lr0.0002_bs24\")\n",
     "\n",
     "stats_dict5_3 = get_stats(\"math_orig_3epochs_full_lr5e-05_bs24\")\n",
+    "stats_dict52_3 = get_stats(\"math_orig_3epochs_full_lr2e-05_bs24\")\n",
+    "stats_dict52_128_3 = get_stats(\"math_orig_3epochs_full_lr2e-05_bs128\")\n",
     "stats_dict7_3 = get_stats(\"math_orig_3epochs_full_lr5e-07_bs24\")\n",
     "stats_dict4_3 = get_stats(\"math_orig_3epochs_full_lr0.0002_bs24\")\n",
     "\n",
@@ -129,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,16 +172,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3812422/2247396889.py:23: UserWarning: linestyle is redundantly defined by the 'linestyle' keyword argument and the fmt string \"v-\" (-> linestyle='-'). The keyword argument will take precedence.\n",
+      "/tmp/ipykernel_2620605/351864191.py:23: UserWarning: linestyle is redundantly defined by the 'linestyle' keyword argument and the fmt string \"v-\" (-> linestyle='-'). The keyword argument will take precedence.\n",
       "  plt.plot(ratios_dict_half[\"unmemorized_acc_cummax\"][[1, 3, 5]], ratios_dict_half[\"avg_test_acc\"][[1, 3, 5]], \"v-\", markersize=10, c=color_dict[\"2e-5\"], alpha=0.8, label=\"half\", linestyle=\"dashed\", linewidth=2)\n",
-      "/tmp/ipykernel_3812422/2247396889.py:24: UserWarning: linestyle is redundantly defined by the 'linestyle' keyword argument and the fmt string \"v-\" (-> linestyle='-'). The keyword argument will take precedence.\n",
+      "/tmp/ipykernel_2620605/351864191.py:24: UserWarning: linestyle is redundantly defined by the 'linestyle' keyword argument and the fmt string \"v-\" (-> linestyle='-'). The keyword argument will take precedence.\n",
       "  plt.plot(ratios_dict_quarter[\"unmemorized_acc_cummax\"][[1, 3, 5]], ratios_dict_quarter[\"avg_test_acc\"][[1, 3, 5]], \"v-\", markersize=10, c=color_dict[\"2e-5\"], alpha=0.8, label=\"quarter\", linestyle=\"dotted\", linewidth=2)\n"
      ]
     },
@@ -223,7 +225,6 @@
     "plt.plot(ratios_dict_quarter[\"unmemorized_acc_cummax\"][[1, 3, 5]], ratios_dict_quarter[\"avg_test_acc\"][[1, 3, 5]], \"v-\", markersize=10, c=color_dict[\"2e-5\"], alpha=0.8, label=\"quarter\", linestyle=\"dotted\", linewidth=2)\n",
     "\n",
     "\n",
-    "# plt.legend()\n",
     "plt.xlabel(\"Pre-Memorization Train Accuracy\", fontsize=15)\n",
     "plt.ylabel(\"Test Accuracy\", fontsize=15)\n",
     "plt.title(\"MATH / Llama3 8B\", fontsize=20)\n",
